# image_similarity

./: .gitignore  CMakeLists.txt  README.md
src/: ImageHasher.cpp  ImageHasher.h  main.cpp
